[workspace]
resolver = "2"
members = [
    "crates/turbo-core",
    "crates/turbo-bytes",
    "crates/turbo-string",
    "crates/turbo-hash",
    "crates/turbo-collections",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Lauro"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/xlauro/turbo"
homepage = "https://github.com/xlauro/turbo"
description = "High-performance infrastructure and data processing platform"

[workspace.dependencies]
thiserror = { version = "1.0" }
criterion = { version = "0.5", features = ["html_reports"] }
    