[package]
name = "turbo-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types, traits, errors and utilities for the Turbo ecosystem"

[features]
default = ["std"]
std = []
alloc = []

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "core_bench"
harness = false

